TestSuite/Verification/Error/Parallel/Correctness/On-Device/Intra-Region/CPU/out/includes/RecursionNestedTest.hxx

/*********************************************************************/
/*        This is a generated C++ Header file.                       */
/*        Generated by PatternDSL.                                   */
/*        Contains the function declarations for the source file     */
/*********************************************************************/

#ifndef RecursionNestedTest_HXX
#define RecursionNestedTest_HXX

uint randomizer(int n = 42) {
    srand(n);
    return rand();
}


    int32_t counter(int32_t input);

#endif